--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,23 +1,17 @@
 <div class="cyberpunk-container">
     <div class="glitch-title" data-text="ACERCA DE MÍ">ACERCA DE MÍ</div>
     <p class="cyberpunk-text">
-      ¡Hola! Soy <span class="neon">Diego</span>, un apasionado de la tecnología, el desarrollo web y la inteligencia artificial.
-      Me encanta explorar el futuro del software y las nuevas tendencias en electrónica y diseño digital.
+      ¡Hola! Soy <span class="neon">Diego</span>, un apasionado a tecnologia y al mundo Frikie como a los videojuegos, mangas comics etc soy una persona que practica Skateboarding.
+      Me gusta el diseño digital al igual que la electricidad disfruto aprender acerca de eso.
     </p>
   
     <div class="cyberpunk-card">
-      <h2>🔹 HABILIDADES 🔹</h2>
+      <h2>🔹 Hobbies 🔹</h2>
       <ul>
-        <li>Desarrollo en <span class="neon">Node.js</span>, Express y bases de datos NoSQL</li>
-        <li>Optimización de código y modularización</li>
-        <li>Diseño web con un enfoque <span class="neon">futurista</span> y funcional</li>
-        <li>Trabajo con hardware como <span class="neon">Raspberry Pi</span> y sensores</li>
+        <li>Practicar <span class="neon">Skateboarding</span>, </li>
+        <li>Salir con mis amigos una o dos veces al mes para ir al cine</li>
+        <li>Diseño digital o <span class="neon">pixel art</span> editar tambien como imagenes o videos</li>
+        <li>Y me agrada leer comics, manga en momentos filosofia ver documentales de aninales etc</li>
       </ul>
     </div>
-  
-    <div class="cyberpunk-card">
-      <h2>🌌 CONTACTO 🌌</h2>
-      <p>Si quieres hablar sobre proyectos interesantes o el futuro de la tecnología, contáctame. 🚀</p>
-    </div>
-  </div>
   
