--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -11,7 +11,7 @@
         <li>Practicar <span class="neon">Skateboarding</span>, </li>
         <li>Salir con mis amigos una o dos veces al mes para ir al cine</li>
         <li>Diseño digital o <span class="neon">pixel art</span> editar tambien como imagenes o videos</li>
-        <li>Y me agrada leer comics, manga en momentos filosofia ver documentales de aninales etc</li>
+        <li>Y me agrada leer comics, manga en momentos filosofia ver documentales de animales etc</li>
       </ul>
     </div>
   
