--- a/src/app/pages/historieta/historieta.component.css
+++ b/src/app/pages/historieta/historieta.component.css
@@ -1,4 +1,4 @@
-/* Fondo estilo Superman */
+
 .superman-container {
     background: linear-gradient(to bottom, #000428, #004e92);
     color: white;
@@ -6,7 +6,7 @@
     font-family: 'Orbitron', sans-serif;
 }
 
-/* Título con efecto */
+
 .superman-title {
     color: yellow;
     text-shadow: 2px 2px 5px red;
@@ -15,7 +15,6 @@
     margin-bottom: 20px;
 }
 
-/* Tabla con colores de Superman */
 .superman-table {
     width: 100%;
     border-collapse: collapse;
@@ -41,7 +40,7 @@
     transition: 0.3s;
 }
 
-/* Botones con efecto Superman */
+
 .superman-btn-select {
     background: yellow;
     color: blue;
@@ -56,7 +55,7 @@
     border: 2px solid yellow;
 }
 
-/* Botón de eliminar con efecto de peligro */
+/* Botón de eliminar*/
 .superman-btn-delete {
     background: red;
     color: white;
@@ -70,14 +69,14 @@
     border-color: white;
 }
 
-/* Mensaje de no hay datos */
+
 .superman-no-data {
     font-size: 1.5rem;
     color: yellow;
     text-shadow: 0 0 5px red;
 }
 
-/* Estilo de la tarjeta del formulario */
+
 .superman-card {
     background: rgba(0, 0, 0, 0.8);
     border: 2px solid yellow;
