--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" 
 data-bs-theme="dark">
 
-<a class="navbar-brand">DS03SV-24</a>
+<a class="navbar-brand">Evaluación</a>
 
 <div id="navbarNav" class="collapse navbar-collapse">
     <ul class="navbar-nav ml-auto">
